src/test/ui/coherence/impl-foreign[foreign]-for-foreign.stderr
error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/impl-foreign[foreign]-for-foreign.rs:12:1
   |
LL | impl Remote1<u32> for f64 {
   | ^^^^^------------^^^^^---
   | |    |                |
   | |    |                `f64` is not defined in the current crate
   | |    `u32` is not defined in the current crate
   | impl doesn't use only types from inside the current crate
   |
   = note: define and implement a trait or new type instead

error: aborting due to previous error

For more information about this error, try `rustc --explain E0117`.
